Made  a lot of changes.
It now should work well for big plates within a reasonable time.

- Used other libraries to do union and differences.
- Find out which polygons allow you to cut inside and prevent it
        at the beginning.
- Sped up by not constantly making clones in the signs.
        Should do this more though.
- Turn on the blower at the beginning.
- Fixed some other bugs.
- Added in more test stuff to main.rs
- Did much more. Should have done more commits but
        didn't know what would work at the time.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,7 @@ algorithms = { path = "../algorithms_rust_lib/" }
 # range_map = {  git = "https://github.com/Monksc/range_map", rev = "d1e2994"}
 range_map = { path = "../range_map/" }
 ordered-float = "3.4.0"
+offset-polygon = "0.1.0"
+geo-clipper = "0.7.3"
+geo-types = "0.7.3"
 
