--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ offset-polygon = "0.1.0"
 geo-clipper = "0.7.3"
 geo-types = "0.7.3"
 serde = { version = "1.0.183", features = ["derive"] }
+once_cell = "1.19.0"
+
